# clox

./: .clang-format  .envrc  .gitignore  CMakeLists.txt  flake.nix  main.c  todo.plan
clox_lib/: CMakeLists.txt
clox_lib/include/: chunk.h  common.h  compiler.h  debug.h  line.h  memory.h  scanner.h  value.h  vm.h
clox_lib/src/: chunk.c  compiler.c  debug.c  line.c  memory.c  scanner.c  value.c  vm.c
